# vk-test

./: .clangd  .gitignore  CMakeLists.txt  README.md  output.txt  rebuild+start.ps1  rebuild+start.sh  setup.env  update-glm.sh  vkvia.html
.cache/clangd/index/: HelloTriangleApplication.cpp.735BFC5A0DCB4579.idx  HelloTriangleApplication.h.B17540C5AC11695A.idx  SDL.h.204614468CBD9016.idx  SDL_assert.h.DB1FA63507BAD11A.idx  SDL_atomic.h.9151B3CD477F2EBB.idx  SDL_audio.h.24F745187F3C9F31.idx  SDL_blendmode.h.044CE06697D12784.idx  SDL_clipboard.h.CDFE21362C7D38C4.idx  SDL_config.h.06197302A6A5170A.idx  SDL_config_windows.h.942611D686CDB90E.idx  SDL_cpuinfo.h.6C9487672DE0E9F1.idx  SDL_endian.h.0B6D2BBD3E6EB916.idx  SDL_error.h.EFBFCA89310E6E6D.idx  SDL_events.h.92182A220648531B.idx  SDL_filesystem.h.B9A77C509A1F97FC.idx  SDL_gamecontroller.h.3EB1B07E8B61C6F4.idx  SDL_gesture.h.E9B58C157C19C5CD.idx  SDL_guid.h.090DDB2E57DD3C28.idx  SDL_haptic.h.5E0A5EC1D0A23E52.idx  SDL_hidapi.h.619F3345906A0E84.idx  SDL_hints.h.996CBB93AEA36271.idx  SDL_joystick.h.BF92668B4904E8F8.idx  SDL_keyboard.h.6D8FFDA16FC17177.idx  SDL_keycode.h.64AC5E822ECF393E.idx  SDL_loadso.h.07334132A44A1889.idx  SDL_locale.h.48379CDF6E4F3DEE.idx  SDL_log.h.32D6ADEC753B6911.idx  SDL_main.h.E0BFD4ECC088753A.idx  SDL_messagebox.h.CF682AEE05E458FE.idx  SDL_metal.h.054BB68358B2F0A1.idx  SDL_misc.h.F100F95147172A3B.idx  SDL_mouse.h.0AC1B57E33D5CE02.idx  SDL_mutex.h.6196A3ED98052D0C.idx  SDL_pixels.h.15FE7DB683C6F1B9.idx  SDL_platform.h.CDC98E86F8376903.idx  SDL_power.h.6825036675F89C42.idx  SDL_quit.h.FBADA471648A9203.idx  SDL_rect.h.D198A4EBB5E9004C.idx  SDL_render.h.3B0B18536C340F92.idx  SDL_rwops.h.20F2317FE87C8659.idx  (+17 more)
altay/: CMakeLists.txt
asgrd/: CMakeLists.txt
asgrd/include/: version.h
asgrd/src/: main.cpp  version.cpp
kamchatka/: CMakeLists.txt
kamchatka/src/: main.cpp
physx/: CMakeLists.txt
sdl/: CMakeLists.txt
sdl/src/: main.cpp
snake/: CMakeLists.txt
snake/src/: main.cpp
src/: CMakeLists.txt
src/altay/: CMakeLists.txt
src/asgrd/: CMakeLists.txt  main.cpp
src/kamchatka/: CMakeLists.txt  main.cpp
src/physx/: CMakeLists.txt  main.cpp
src/sdl/: CMakeLists.txt  main.cpp  vk_extern.cpp  vk_function.cpp
src/vk/: CMakeLists.txt  main.cpp
src/vk_sdl_test_1/: CMakeLists.txt  main.cpp
src/vk_sdl_test_2/: CMakeLists.txt  main.cpp  triangl.h
src_physx/: main.cpp
src_sdl/: CMakeLists.txt  main.cpp
src_vk/: CMakeLists.txt  HelloTriangleApllication.cpp  HelloTriangleApplication.cpp  HelloTriangleApplication.h  main.cpp
src_winapi/: CMakeLists.txt  main.cpp
triangle/: CMakeLists.txt  application.cpp  application.h  instance.cpp  instance.h  os.h  sdl_window.cpp  sdl_window.h  triangle.cpp  window.h
