cmake_minimum_required(VERSION 3.26 FATAL_ERROR)

get_filename_component(PROJECT_NAME "${CMAKE_CURRENT_SOURCE_DIR}" NAME)

set(CMAKE_C_COMPILER "clang")
set(CMAKE_CXX_COMPILER "clang++")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

project(${PROJECT_NAME} VERSION 0.0.1 DESCRIPTION "C++ Basic Reactive Concepts" LANGUAGES C CXX)

cmake_path(GET CMAKE_CURRENT_SOURCE_DIR PARENT_PATH EXECUTABLE_OUTPUT_PATH)
cmake_path(GET CMAKE_CURRENT_SOURCE_DIR PARENT_PATH CACHEFILE_OUTPUT_PATH)
cmake_path(GET CMAKE_CURRENT_SOURCE_DIR PARENT_PATH PDBFILE_OUTPUT_PATH)

set(EXECUTABLE_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH}/build/bin)
set(CMAKE_CACHEFILE_DIR ${CACHEFILE_OUTPUT_PATH}/build/cache)
set(CMAKE_PDB_OUTPUT_DIRECTORY ${PDBFILE_OUTPUT_PATH}/build/pdb)

file(GLOB PROJECT_PATH_LIST LIST_DIRECTORIES true [a-z]*)

foreach(PROJECT_PATH ${PROJECT_PATH_LIST})
    cmake_path(GET PROJECT_PATH FILENAME PROJECT_DIR_NAME)

    foreach(ENABLE_PROJECT ${ENABLE_PROJECT_LIST})
        if(${PROJECT_DIR_NAME} STREQUAL ${ENABLE_PROJECT})
            add_subdirectory(${ENABLE_PROJECT})
            message("PROJECT_ENABLED: " ${ENABLE_PROJECT})
        endif()
    endforeach()
endforeach()
